--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-diffusers==0.6.0
-numpy==1.23.4
-Pillow==9.2.0
-RealESRGAN==0.3.0
-torch==1.12.1
-transformers==4.23.1
+diffusers =  "0.6.0"
+numpy = "1.23.4"
+Pillow = "9.2.0"
+RealESRGAN = "0.3.0"
+torch = "1.12.1"
+transformers = "4.23.1"
 
 
 [dev-packages]
