--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # exclude everything
-images/*
-weights/*
+/images/*
+/weights/*
 
 # exception to the rule
-!images/.gitkeep
-!weights/.gitkeep
+/!images/.gitkeep
+/!weights/.gitkeep
